--- a/frontend/templates/themes_client/homepage_cli.html
+++ b/frontend/templates/themes_client/homepage_cli.html
@@ -13,13 +13,19 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  
     <link rel="stylesheet" href="{% static 'themes_admin/css/bootstrap.min.css' %}">
     <script src="{% static 'themes_admin/js/popper.min.js' %}"></script>
 
+    <link rel="stylesheet" href="{% static 'themes_client/css/magnific-popup.css' %}">
+    <link rel="stylesheet" href="{% static 'themes_client/css/jquery-ui.css' %}">
+  
     <link rel="stylesheet" href="{% static 'themes_admin/css/master.css' %}">
     <link rel="stylesheet" href="{% static 'themes_admin/css/add_category.css' %}">
-    
+
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
        integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
@@ -385,7 +391,13 @@
     <script src="https://cdn.datatables.net/responsive/2.2.7/js/responsive.bootstrap4.min.js"></script>
 
 
-
+    <script src="{% static 'themes_client/js/jquery-3.7.1.min.js' %}"></script>
+    <script src="{% static 'themes_client/js/jquery-ui.js' %}"></script>
+    <script src="{% static 'themes_client/js/popper.min.js' %}"></script>
+    <script src="{% static 'themes_client/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'themes_client/js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'themes_client/js/jquery.magnific-popup.min.js' %}"></script>
+  
     <script src="{% static 'themes_admin/js/main.js' %}"></script>
     <script src="{% static 'themes_admin/js/themes.js' %}"></script>
 </body>
